# oracle-fusion-client-mock

./: .gitignore  README.md  example.py  example_sales_orders.py  pyproject.toml
docs/: API-Reference.md
src/oracle_fusion_mock/: __init__.py  client.py  data_loader.py  models.py
src/oracle_fusion_mock/data/: sales_orders.json
src/oracle_fusion_mock/sales_orders/: __init__.py  client.py  data_loader.py  models.py  operations.py
src/oracle_fusion_mock/services/: __init__.py  acknowledgments.py  agreements.py  base.py  draft_purchase_orders.py  purchase_orders.py  requisitions.py  suppliers.py
tests/: __init__.py  conftest.py  test_client.py  test_consistency.py  test_purchase_orders.py  test_sales_orders.py  test_suppliers.py
